tests/ui/pattern/issue-115599.stderr
error: constant of non-structural type `String` in a pattern
  --> $DIR/issue-115599.rs:7:12
   |
LL | const CONST_STRING: String = String::new();
   | -------------------------- constant defined here
...
LL |     if let CONST_STRING = empty_str {}
   |            ^^^^^^^^^^^^ constant of non-structural type
   |
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   |
   = note: `String` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: aborting due to 1 previous error

